--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Project 3</title>
   <link rel="icon" href="/images/pnc.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyyFhjzC4J7Ss_Eprz1hM7z8sCT10EvRI"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyyFhjzC4J7Ss_Eprz1hM7z8sCT10EvRI"></script> -->
   <!-- inject:js -->
   <!-- endinject -->
   <!-- inject:css -->
