Fixed bug where image not being attached to new user using the profile. Resolved by changing name of user property in controller.

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
   </nav>
   <div class="message" ng-if="main.message">{{ main.message }}</div>
   <main ui-view class="site-content"></main>
-  <footer>WE DA BEST    - Big <span>&hearts;</span> from The Pretty Mongooses</footer>
+  <footer></footer>
 </body>
 </html>
