Icon additions to navbar in place of text. Bright green added.

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project 3</title>
+  <title>groupmove</title>
   <link rel="icon" href="/images/pnc.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyyFhjzC4J7Ss_Eprz1hM7z8sCT10EvRI"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbJJKxOycA20qFoUm_vCpe-UqjiCOVuG4"></script>
   <!-- inject:js -->
   <!-- endinject -->
   <!-- inject:css -->
@@ -17,13 +17,13 @@
   <nav>
     <div class="links">
       <ul class="link">
-        <li ng-if="main.isAuthenticated()"><a ui-sref="propsIndex">Find Properties</a></li>
-        <li ng-if="(main.isAuthenticated() && main.currentUserGroupId)"><a ui-sref="groupsHome({ id: main.currentUserGroupId })">My Group</a></li>
-        <li ng-if="main.isAuthenticated() && !main.currentUserGroupId"><a ui-sref="groupsNew">Add a Group</a></li>
-        <li ng-if="main.isAuthenticated()"><a ui-sref="usersShow({ id: main.currentUserId })">Profile</a></li>
-        <li ng-if="main.isAuthenticated()"><a id="logout-link" ng-click="main.logout()" href="#">Logout</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="login">Login</a></li>
-        <li ng-if="!main.isAuthenticated()"><a ui-sref="register">Register</a></li>
+        <li ng-if="main.isAuthenticated()"><a ui-sref="propsIndex"><img src="/images/search.png"></a></li>
+        <li ng-if="(main.isAuthenticated() && main.currentUserGroupId)"><a ui-sref="groupsHome({ id: main.currentUserGroupId })"><img src="/images/group.png"></a></li>
+        <li ng-if="main.isAuthenticated() && !main.currentUserGroupId"><a ui-sref="groupsNew"><img src="/images/addgroup.png"></a></li>
+        <li ng-if="main.isAuthenticated()"><a ui-sref="usersShow({ id: main.currentUserId })"><img src="/images/profile.png"></a></li>
+        <li ng-if="main.isAuthenticated()"><a id="logout-link" ng-click="main.logout()" href="#"><img src="/images/logout.png"></a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="login"><img src="/images/login.png"></a></li>
+        <li ng-if="!main.isAuthenticated()"><a ui-sref="register"><img src="/images/register.png"></a></li>
       </ul>
     </div>
   </nav>
