--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>groupmove</title>
   <link rel="icon" href="/images/pnc.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbJJKxOycA20qFoUm_vCpe-UqjiCOVuG4"></script>
   <!-- inject:js -->
   <!-- endinject -->
@@ -29,6 +29,6 @@
   </nav>
   <div class="message" ng-if="main.message">{{ main.message }}</div>
   <main ui-view class="site-content"></main>
-  <footer></footer>
+  <footer>groupmove</footer>
 </body>
 </html>
