--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>groupmove</title>
   <link rel="icon" href="/images/pnc.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbJJKxOycA20qFoUm_vCpe-UqjiCOVuG4"></script>
   <!-- inject:js -->
   <!-- endinject -->
